horizontal scroll and other stuff fix

--- a/src/app/views/share/header/header.component.scss
+++ b/src/app/views/share/header/header.component.scss
@@ -131,3 +131,9 @@ ul {
 		margin-left: 20px;
 	}
 }
+
+.dropdown-item.active, .dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #ff2666;
+}
